[gd_scene load_steps=13 format=2]

[ext_resource path="res://Nodes/Villager/EnemyVillager.gd" type="Script" id=1]
[ext_resource path="res://Resources/Imgs/villagers/villager.png" type="Texture" id=2]
[ext_resource path="res://Resources/Fonts/FTLTLT.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Resources/Imgs/villagers/villager_enemy.png" type="Texture" id=4]
[ext_resource path="res://Nodes/Villager/blood.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 16 )

[sub_resource type="CircleShape2D" id=3]
radius = 70.1142

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 0, 96, 32, 32 )

[node name="EnemyVillager" type="RigidBody2D"]
collision_layer = 3
mode = 2
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
can_sleep = false
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -60.0
margin_top = -50.0
margin_right = 60.0
margin_bottom = -36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
one_way_collision_margin = 0.0

[node name="Area" type="Area2D" parent="."]
position = Vector2( 0, -16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area"]
shape = SubResource( 2 )

[node name="SoldierArea" type="Area2D" parent="."]
position = Vector2( 0, -16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoldierArea"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 4 )
vframes = 4
hframes = 4

[node name="Hover" type="Sprite" parent="Sprite"]
self_modulate = Color( 1, 1, 1, 0.705882 )
z_index = 1
texture = ExtResource( 4 )
vframes = 4
hframes = 4

[node name="LifeBar" type="TextureProgress" parent="Sprite/Hover"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -56.0
margin_bottom = -48.0
theme = SubResource( 5 )
value = 50.0
texture_under = SubResource( 6 )
texture_progress = SubResource( 7 )
nine_patch_stretch = true
stretch_margin_left = 16
stretch_margin_right = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JobTimer" type="Timer" parent="."]

[node name="moving" type="Label" parent="."]
visible = false
margin_left = -16.0
margin_top = -56.0
margin_right = 24.0
margin_bottom = -42.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="blood" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, -16 )
z_index = 5
emitting = false
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_EnemyVillager_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_EnemyVillager_body_exited"]
[connection signal="mouse_entered" from="Area" to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_Area_mouse_exited"]
[connection signal="body_entered" from="SoldierArea" to="." method="_on_SoldierArea_body_entered"]
[connection signal="body_exited" from="SoldierArea" to="." method="_on_SoldierArea_body_exited"]
[connection signal="timeout" from="JobTimer" to="." method="_on_JobTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
